<resources>
    <string name="app_name">Words</string>
    <string name="title_home">Слова</string>
    <string name="title_search">Поиск</string>
    <string name="title_enter_login">Логин</string>
    <string name="title_enter_password">Пароль</string>
    <string name="title_do_not_have_an_account">Еще нет аккаунта? "<b>"Зарегистрируйтесь."</b>"</string>
    <string name="title_have_an_account">Уже есть аккаунт? "<b>Войти."</b>"</string>
    <string name="title_sign_up">Зарегистрироваться</string>
    <string name="title_sign_in">Вход</string>
    <string name="title_confirm_password">Подтвердите пароль</string>
    <string name="title_add">Добавить</string>
    <string name="title_edit">Изменить</string>
    <string name="title_enter_word">Введите слово</string>
    <string name="title_enter_transcription">Введите транскрипцию (Не обязательно)</string>
    <string name="title_enter_translate">Введите перевод</string>
    <string name="yandex_dictionary_api_key">dict.1.1.20181010T070000Z.16b824adde570294.88d60c64a344f4c7ede04647219b095c4575d1ea</string>
    <string name="title_add_words">Добавьте слова</string>
    <string name="title_know_word">Я вспомнил\nэто слово</string>
    <string name="title_do_not_know_word">Я не вспомнил\nэто слово</string>
    <string name="title_study">Учить</string>
    <string name="title_cancel">Отмена</string>
    <string name="title_choose_translate">Выберите перевод</string>
    <string name="title_nickname">Имя</string>
    <string name="title_next">Далее</string>
    <string name="title_enter_nickname">Введите имя пользователя</string>
    <string name="title_subscribe">Подписаться</string>
    <string name="title_enter_english_text">Введите текст на английском</string>
    <string name="title_add_example">Добавить пример</string>
    <string name="title_example">Пример %1$s</string>
    <string name="error_title_fill_examples">Заполните все поля в примерах</string>
    <string name="error_title_fill_fields">Заполните все обязательные поля в слове и примерах</string>
    <string name="title_empty_word">Нет новых слов</string>
    <string name="title_profile">Профиль</string>
    <string name="title_verify_email_address">Мы только что отправили сообщение со ссылкой подтверждения на указанный почтовый адрес</string>
    <string name="title_send_email_verification_message_again">Отправить повторно</string>
    <string name="title_check_verification">Проверить</string>
    <string name="title_exit">Выйти</string>
    <string name="title_close">Закрыть</string>
    <string name="title_change_mail">Изменить email</string>
    <string name="title_change">Изменить</string>
</resources>
