<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="android.view.View" />

        <import type="androidx.navigation.Navigation" />

        <variable
            name="handler"
            type="com.itechart.vpaveldm.words.adapterLayer.login.AuthorizationViewModel" />

    </data>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/nicknameET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/login_side_margin"
            android:layout_marginTop="128dp"
            android:layout_marginEnd="@dimen/login_side_margin"
            android:hint="@string/title_nickname"
            android:inputType="textEmailAddress"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/nextButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> handler.signUp(nicknameET.getText().toString())}"
            android:text="@string/title_next"
            app:layout_constraintEnd_toEndOf="@id/nicknameET"
            app:layout_constraintStart_toStartOf="@id/nicknameET"
            app:layout_constraintTop_toBottomOf="@id/nicknameET" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:onClick="@{(view) -> Navigation.findNavController(view).popBackStack()}"
            android:text="@string/title_have_an_account"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>
</layout>