<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="android.view.View" />

        <variable
            name="handler"
            type="com.itechart.vpaveldm.words.adapterLayer.addWord.AddWordViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/enterWordET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/title_enter_word"
            android:inputType="text"
            android:text="@={handler.wordObservable}"
            app:layout_constraintBottom_toTopOf="@id/enterTranscriptionET"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/enterTranscriptionET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/title_enter_transcription"
            android:inputType="text"
            android:text="@={handler.transcriptionObservable}"
            app:layout_constraintBottom_toTopOf="@id/enterTranslateET"
            app:layout_constraintEnd_toStartOf="@id/transcriptionLoadButton"
            app:layout_constraintStart_toStartOf="@id/enterWordET"
            app:layout_constraintTop_toBottomOf="@id/enterWordET"
            tools:ignore="Autofill" />

        <ImageButton
            android:id="@+id/transcriptionLoadButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:onClick="@{() -> handler.loadTranscription()}"
            android:padding="8dp"
            android:src="@drawable/ic_file_download_black_24dp"
            android:visibility="@{handler.transcriptionProgressBarVisible ? View.INVISIBLE : View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="@id/enterTranscriptionET"
            app:layout_constraintEnd_toEndOf="@id/enterWordET"
            app:layout_constraintStart_toEndOf="@id/enterTranscriptionET"
            app:layout_constraintTop_toTopOf="@id/enterTranscriptionET"
            tools:ignore="ContentDescription" />

        <ProgressBar
            android:id="@+id/transcriptionProgressBar"
            android:layout_width="@dimen/progress_bar_size"
            android:layout_height="@dimen/progress_bar_size"
            android:visibility="@{handler.transcriptionProgressBarVisible ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="@id/transcriptionLoadButton"
            app:layout_constraintEnd_toEndOf="@id/transcriptionLoadButton"
            app:layout_constraintStart_toStartOf="@id/transcriptionLoadButton"
            app:layout_constraintTop_toTopOf="@id/transcriptionLoadButton" />

        <EditText
            android:id="@+id/enterTranslateET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/title_enter_translate"
            android:inputType="text"
            android:text="@={handler.translateObservable}"
            app:layout_constraintEnd_toStartOf="@id/translateLoadButton"
            app:layout_constraintStart_toStartOf="@id/enterWordET"
            app:layout_constraintTop_toBottomOf="@id/enterTranscriptionET"
            tools:ignore="Autofill" />

        <ImageButton
            android:id="@+id/translateLoadButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:onClick="@{() -> handler.loadTranslate()}"
            android:padding="8dp"
            android:src="@drawable/ic_file_download_black_24dp"
            android:visibility="@{handler.translateProgressBarVisible ? View.INVISIBLE : View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="@id/enterTranslateET"
            app:layout_constraintEnd_toEndOf="@id/enterWordET"
            app:layout_constraintStart_toEndOf="@id/enterTranslateET"
            app:layout_constraintTop_toTopOf="@id/enterTranslateET"
            tools:ignore="ContentDescription" />

        <ProgressBar
            android:id="@+id/translateProgressBar"
            android:layout_width="@dimen/progress_bar_size"
            android:layout_height="@dimen/progress_bar_size"
            android:visibility="@{handler.translateProgressBarVisible ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="@id/translateLoadButton"
            app:layout_constraintEnd_toEndOf="@id/translateLoadButton"
            app:layout_constraintStart_toStartOf="@id/translateLoadButton"
            app:layout_constraintTop_toTopOf="@id/translateLoadButton" />

    </android.support.constraint.ConstraintLayout>

</layout>